WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
176037
ResourceLoadStatistics logic does not understand custom WebsiteData stores
https://bugs.webkit.org/show_bug.cgi?id=176037
Summary
ResourceLoadStatistics logic does not understand custom WebsiteData stores
Brent Fulgham
Reported
2017-08-28 15:54:04 PDT
The NetworkProcess::updateCookiePartitioningForTopPrivatelyOwnedDomains always notifies the default website data store about observations it has made. This should be revised so that WebKit clients that register custom data stores through the WKWebsiteDataStores API can be assured that observations made in one session do not manipulate data from another session.
Attachments
Patch
(5.54 KB, patch)
2017-08-28 16:11 PDT
,
Brent Fulgham
no flags
Details
Formatted Diff
Diff
Patch
(13.08 KB, patch)
2017-08-29 16:24 PDT
,
Brent Fulgham
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Brent Fulgham
Comment 1
2017-08-28 15:54:17 PDT
<
rdar://problem/33338238
>
Brent Fulgham
Comment 2
2017-08-28 16:11:24 PDT
Created
attachment 319216
[details]
Patch
Brent Fulgham
Comment 3
2017-08-29 16:24:20 PDT
Created
attachment 319301
[details]
Patch
WebKit Commit Bot
Comment 4
2017-08-29 19:54:34 PDT
Comment on
attachment 319301
[details]
Patch Clearing flags on attachment: 319301 Committed
r221337
: <
http://trac.webkit.org/changeset/221337
>
WebKit Commit Bot
Comment 5
2017-08-29 19:54:36 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug